--- a/RAG_implement_using_langchain.ipynb
+++ b/RAG_implement_using_langchain.ipynb
@@ -1,29 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install sentence_transformer pypdf faiss-gpu langchain-community\n",
-        "!pip install -U langchain-huggingface\n",
-        "!pip install langchain langchain-openai"
-      ],
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -31,11 +10,10 @@
         "id": "SLwaS07ulO4m",
         "outputId": "c3a84c8f-3feb-4644-e7e1-2ac34b26e26a"
       },
-      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[31mERROR: Could not find a version that satisfies the requirement sentence_transformer (from versions: none)\u001b[0m\u001b[31m\n",
             "\u001b[0m\u001b[31mERROR: No matching distribution found for sentence_transformer\u001b[0m\u001b[31m\n",
@@ -137,10 +115,20 @@
             "Requirement already satisfied: jsonpointer>=1.9 in /usr/local/lib/python3.10/dist-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.3.0,>=0.2.7->langchain) (3.0.0)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install sentence_transformer pypdf faiss-gpu langchain-community\n",
+        "!pip install -U langchain-huggingface\n",
+        "!pip install langchain langchain-openai"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {
+        "id": "mF9W-bjKla5s"
+      },
+      "outputs": [],
       "source": [
         "from langchain_community.document_loaders import PyPDFLoader\n",
         "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
@@ -150,19 +138,24 @@
         "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
         "from langchain_core.prompts import ChatPromptTemplate\n",
         "from langchain.chains import create_retrieval_chain"
-      ],
-      "metadata": {
-        "id": "mF9W-bjKla5s"
-      },
-      "execution_count": 22,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {
+        "id": "GSZOH6q5yQXA"
+      },
+      "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n"
-      ],
+        "# For openai key\n",
+        "import os\n",
+        "os.environ[\"OPENAI_API_KEY\"] = \"\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -170,81 +163,135 @@
         "id": "RoGkdMtSmqv0",
         "outputId": "ade84e0c-290a-4e43-f165-1c427dea50ac"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "OKMYdSyUpBRU"
+      },
+      "outputs": [],
       "source": [
         "# loading the document (pdf)\n",
         "\n",
         "loader = PyPDFLoader(file_path = '/content/drive/My Drive/qlore paper.pdf')\n",
         "documents = loader.load()"
-      ],
-      "metadata": {
-        "id": "OKMYdSyUpBRU"
-      },
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "bHEh70U9pg-a"
+      },
+      "outputs": [],
       "source": [
         "# split the document in chunks\n",
         "\n",
         "text = RecursiveCharacterTextSplitter().split_documents(documents)"
-      ],
-      "metadata": {
-        "id": "bHEh70U9pg-a"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "K5MkMNM4vNGO"
+      },
+      "outputs": [],
       "source": [
         "# embedding the document\n",
         "# embedding from hugging face\n",
         "\n",
         "embeddings = HuggingFaceEmbeddings(model_name = 'BAAI/bge-small-en-v1.5', encode_kwargs = {\"normalize_embeddings\": True})"
-      ],
-      "metadata": {
-        "id": "K5MkMNM4vNGO"
-      },
-      "execution_count": 23,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "id": "IkNWZihNvugx"
+      },
+      "outputs": [],
       "source": [
         "# Similarity search and clustering dense vector using FAISS and develop vectorstore\n",
         "vectorstore = FAISS.from_documents(text, embeddings)\n",
         "\n",
         "vectorstore.save_local('/content/drive/MyDrive/vectorstore.db')\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "IkNWZihNvugx"
-      },
-      "execution_count": 27,
-      "outputs": []
+        "\n",
+        "# create a retriever\n",
+        "\n",
+        "retriever = vectorstore.as_retriever()\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 32,
       "metadata": {
         "id": "7r6qa6hUwunE"
       },
+      "outputs": [],
+      "source": [
+        "# load the llm (gpt 3.5 turbo)\n",
+        "\n",
+        "llm =  ChatOpenAI(model_name = 'gpt-3.5-turbo', temperature = 0)\n",
+        "\n",
+        "# prompt template\n",
+        "template = \"\"\"\n",
+        "You are an assistant for question-answering tasks.\n",
+        "Use the provided context only to answer the following question:\n",
+        "\n",
+        "<context>\n",
+        "{context}\n",
+        "</context>\n",
+        "\n",
+        "Question: {input}\n",
+        "\"\"\"\n",
+        "\n",
+        "prompt = ChatPromptTemplate.from_template(template)\n",
+        "\n",
+        "# create document chain\n",
+        "doc_chain = create_stuff_documents_chain(llm, prompt)\n",
+        "chain = create_retrieval_chain(retriever, doc_chain)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "nGZF9n7TyLc4"
+      },
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
